# fred-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
cmake/: FindKernelHeaders.cmake  SubDirs.cmake
